build: автоматическое генерирование ukData.js из CSV
- добавлен скрипт scripts/buildUkDataFromCsv.mjs для парсинга CSV
- сгенерировано полное содержимое src/data/ukData.js из ukrf_articles_105_361.csv
- добавлена функция getArticleOptions() для получения опций статей
- добавлена функция getPartsForArticle() для получения частей статьи
- добавлена функция getPointsForArticlePart() для получения пунктов части
- добавлен npm-скрипт 'build:ukdata' в package.json
- сохранены article_id как строки для сохранения вида '110.1'

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "build:ukdata": "node scripts/buildUkDataFromCsv.mjs",
     "electron:dev": "concurrently -k \"vite\" \"wait-on http://localhost:5173 && electron .\""
   },
   "dependencies": {
